--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,7 +22,7 @@ requirements:
     - {{ compiler('cxx') }}
     - cmake
     - make
-    - extra-cmake-modules
+    - extra-cmake-modules >={{ version }}
     - {{ cdt('mesa-libgl-devel') }}  # [linux]
     - {{ cdt('mesa-dri-drivers') }}  # [linux]
     - {{ cdt('libselinux') }}  # [linux]
@@ -32,15 +32,15 @@ requirements:
     - xorg-libxfixes  # [linux]
     - xorg-libxext
     - qt
-    - sonnet
-    - ki18n
-    - kservice
-    - kconfig
-    - kcoreaddons
-    - kcompletion
-    - kwidgetsaddons
-    - kwindowsystem
-    - kconfigwidgets
+    - sonnet >={{ version }}
+    - ki18n >={{ version }}
+    - kservice >={{ version }}
+    - kconfig >={{ version }}
+    - kcoreaddons >={{ version }}
+    - kcompletion >={{ version }}
+    - kwidgetsaddons >={{ version }}
+    - kwindowsystem >={{ version }}
+    - kconfigwidgets >={{ version }}
     - xcb-util-keysyms
 
 test:
