--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -49,9 +49,13 @@ test:
 
 about:
   home: https://api.kde.org/frameworks/ktextwidgets/html/index.html
-  license: LGPL-v2.1-or-later
-  license_family: GPL
-  license_file: COPYING.LIB
+  license: LGPL-2.0-only AND LGPL-2.0-or-later AND LGPL-2.1-or-later AND LGPL-3.0-only AND LicenseRef-KDE-Accepted-LGPL
+  license_file:
+    - LICENSES/LGPL-2.0-only.txt
+    - LICENSES/LGPL-2.0-or-later.txt
+    - LICENSES/LGPL-2.1-or-later.txt
+    - LICENSES/LGPL-3.0-only.txt
+    - LICENSES/LicenseRef-KDE-Accepted-LGPL.txt
   summary: Text editing widgets
   description: |
     KTextWidgets provides widgets for displaying and editing text. It supports
